--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: mscidata
 Type: Package
-Title: TWO DATA SETS; USA AND MINVOL
+Title: MSCI USA and Min Vol Data Analysis
 Version: 0.1.0
-Author: Pauline
-Maintainer: Pauline <paunimo@gmail.com>
-Description: Contains two data sets; usa and minvol
+Author: John Gilheany
+Maintainer: John Gilheany <johngilheany@gmail.com>
+Description: Contains MSCI USA and Min Vol Data, along with sector and individual stock analysis
 License: None
 LazyData: TRUE
