--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,19 @@ Title: MSCI USA and Min Vol Data Analysis
 Version: 0.1.0
 Author: John Gilheany
 Maintainer: John Gilheany <johngilheany@gmail.com>
-Description: Contains MSCI USA and Min Vol Data, along with sector and individual stock analysis
+Description: Contains MSCI USA (EUSA) and MSCI Min Vol (USMV) Data from 
+    2011-10-31 to 2017-01-05. It includes the weights of each stock in 
+    the index, its sector, price, and ticker. The package also includes
+    analysis of sector weights in EUSA and USMV. Daily stock data from 
+    WRDS is also included, including calculations of rolling volatility
+    and beta. 
 License: None
 LazyData: TRUE
+Imports:
+    dplyr,
+    ggplot,
+    quantmod,
+    PerformanceAnalytics,
+    ggplot2,
+    TTR,
+    zoo
